Fixed Sonarqube conflicts